--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,8 @@
-<html>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+ <title>ActionScript 3.0 Seed for ArgoUML Project Overview</title>
  <style type="text/css">
 /* <![CDATA[ */ 
 @import "http://www.tigris.org/branding/css/tigris.css"; 
@@ -7,100 +10,42 @@
 /*  ]]> */
  </style>
   <link rel="stylesheet" type="text/css" href="http://www.tigris.org/branding/css/print.css" media="print" />
-<script src="http://www.tigris.org/branding/scripts/tigris.js" type="text/javascript">
-</script>
- <title>Project Overview</title>
+<script src="http://www.tigris.org/branding/scripts/tigris.js" type="text/javascript"> </script>
 </head>
 <body>
 
-<p>This is the initial web content for your project.  Please customize
-this to fit your project.  You don't need to answer all these questions
-or follow this exact format, but we do like to see this kind of
-information before we approve projects for public viewing.
-</p>
-
-<p>Until your project is approved, only you can view it and work on
-it.
-</p>
-
-<ul>
-<li>This index.html will be used if and only if you have the "Use
-Project Home Page" option checked on the "Administer Project" page
-(click the "Admin" tab).</li>
-
-<li>To edit this file, check out your project via CVS and edit www/index.html.
-
-<li>You can 'cvs add' and commit other files under the project's "www"
-directory and they will published to your project web site.</li>
-
-<li>Also, consider starting a thread in the "dev" mailing list to get
-these discussion started.  A good one is an "introduction" thread where
-people post messages about themselves and their interest in the
-project.</li>
-
-<li>You can add a "Highlights:" line to the top of all web pages by adding a file www/project_highlights.html </li>
-</ul>
-
-
 <h3>Mission</h3>
 
-<p>What is the goal of this project?
-</p>
+<p>The goal of this project is to bring ActionScript 3.0 diagraming possible through ArgoUML. <abbr title="ActionScript 3.0">AS3</abbr> is a popular programming language when developing for Adobe's open <abbr title="ActionScript Virtual Machine">AVM</abbr>.</p>
 
-<p>What is the scope of this project?
-</p>
-
-<p>For example:</p>
+<p>The scope of the project is pretty straight forward (outlined below).</p>
 
 <ul>
-<li>Develop just enough functionality to scratch a particular itch</li>
-<li>Build a tool just like XYZ, but less broken</li>
-<li>Build the best XYZ-tool ever!</li>
-</ul>
-
-
-<p>What are high-level features you are sure to build?
-</p>
-<ul>
-
-<li>What would you write on a billboard about your project? Users
-might only look for a few seconds.</li>
-
-<li>Use the issue tracker to track features and enhancement
-requests. It is not just for bugs, pre-populate it with feature
-descriptions so that potential contributors know what you would like them
-to work on.</li>
-</ul>
-
-<p>What are the high-level assumptions or ground rules for the project?
-</p>
-
-<p>For example:
-</p>
-
-<ul>
-<li> we will use programming language X on operating system Y for now.
-
-<li>We will, or will not, consider certain functional areas like
-internationalization, high security, concurrency, etc.  The list of
-functional areas will depend on what you are trying to do.
-
-<li>Try to keep this part short.
+<li>Develop just enough to functionality to generate (export) <abbr title="ActionScript 3.0">AS3</abbr> classes, packages, and stub code.</li>
+<li>Common Flash AS3 classes (all packages, classes, and interfaces)</li>
+<li>Flex 2, 3, 4 framework</li>
+<li>Adobe <acronym title="Adobe Integrated Runtime">AIR</acronym> <abbr title="ActionScript 3.0">AS3</abbr> classes</li>
 </ul>
 
 
 <h3>Related resources</h3>
 
 <ul>
-<li>Link to other stuff that you know about.  It will help you
-research requirements and provide a useful resource to potential
-contributors.</li>
-
-<li>Why reinvent the wheel? What is better about this wheel?  Is there
-any existing project that you can partner with or reuse?</li>
-
-<li>Where would you go to try to find potential contibutors?</li>
+<li><strong>Programming ActionScript 3.0</strong> - <a href="http://livedocs.adobe.com/flash/9.0/main/" target="_blank">http://livedocs.adobe.com/flash/9.0/main/</a> and <a href="http://livedocs.adobe.com/flex/3/html/Part6_ProgAS_1.html" target="_blank">http://livedocs.adobe.com/flex/3/html/Part6_ProgAS_1.html</a></li>
+<li><strong>ActionScript 3.0 Language and Components Reference</strong> - <a href="http://livedocs.adobe.com/flash/9.0/ActionScriptLangRefV3/" target="_blank">http://livedocs.adobe.com/flash/9.0/ActionScriptLangRefV3/</a></li>
+<li><strong>Flex 3 ActionScript Language Reference</strong> (Flash &amp; <acronym>Adobe Integrated Runtime</acronym> classes included) - <a href="http://livedocs.adobe.com/flex/3/langref/" target="_blank" title="ActionScript 3.0 Language Reference">http://livedocs.adobe.com/flex/3/langref/</a></li>
 </ul>
 
+<h3>Friends, Contributors, Support</h3>
+<ul>
+<li><abbr title="Los Angeles AIR Adobe User Group">LA AIR</abbr> - <a href="http://laair.org/" target="_blank">http://laair.org</a> (The User Group Manager, Chris Charlton, started this AS3 seed for ArgoUML.</li>
+<li>XTND.US - <a href="http://xtnd.us/" target="_blank">http://xtnd.us</a></li>
+<li><abbr title="Los Angeles Flash Adobe User Group">LA Flash</abbr> - <a href="http://laflash.org/" target="_blank">http://laflash.org</a></li>
+<li>Chris Charlton - <a href="http://chrischarlton.us/" target="_blank">http://chrischarlton.us</a> (co-author of <em><a target="_blank" href="http://www.amazon.com/gp/product/1590598962?ie=UTF8&tag=fingerprintme-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=1590598962">Advanced Flex Application Development: Building Rich Media X</a></em>)</li>
+<li>John Grden (Rock On Flash) - <a href="http://www.rockonflash.com/blog/" target="_blank">http://www.rockonflash.com/blog</a>, <a target="_blank" href="http://osflash.org/red5">Red 5</a>, <a target="_blank" href="http://blog.papervision3d.org/">Papervision 3D</a></li>
+<li>Omar Gonzalez - <a href="http://omar.likesflex.com" target="_blank">http://omar.likesflex.com</a> (co-author of <em><a target="_blank" href="http://www.amazon.com/gp/product/1590598962?ie=UTF8&tag=fingerprintme-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=1590598962">Advanced Flex Application Development: Building Rich Media X</a></em>)</li>
+</ul>
+
+<p>*It has been said that ActionScript 3.0 is a little like Java, and sometimes like JavaScript. It isn't determined if working from the Java argoUML project is worth tweaking or not.</p>
 </body>
 </html>
