Minor text tweaks.
git-svn-id: http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk@3 86345048-e22b-0410-8114-c1fae6e3b697

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 
 <ul>
 <li>Develop just enough to functionality to generate (export) <abbr title="ActionScript 3.0">AS3</abbr> classes, packages, and stub code.</li>
-<li>Common Flash AS3 classes (all packages, classes, and interfaces)</li>
+<li>Common Flash (<abbr title="ActionScript 3.0">AS3</abbr>) classes (all packages, classes, and interfaces)</li>
 <li>Flex 2, 3, 4 framework</li>
 <li>Adobe <acronym title="Adobe Integrated Runtime">AIR</acronym> <abbr title="ActionScript 3.0">AS3</abbr> classes</li>
 </ul>
@@ -38,7 +38,7 @@
 
 <h3>Friends, Contributors, Support</h3>
 <ul>
-<li><abbr title="Los Angeles AIR Adobe User Group">LA AIR</abbr> - <a href="http://laair.org/" target="_blank">http://laair.org</a> (The User Group Manager, Chris Charlton, started this AS3 seed for ArgoUML.</li>
+<li><abbr title="Los Angeles AIR Adobe User Group">LA AIR</abbr> - <a href="http://laair.org/" target="_blank">http://laair.org</a> (The User Group Manager, Chris Charlton, started this <abbr title="ActionScript 3.0">AS3</abbr> seed for ArgoUML.</li>
 <li>XTND.US - <a href="http://xtnd.us/" target="_blank">http://xtnd.us</a></li>
 <li><abbr title="Los Angeles Flash Adobe User Group">LA Flash</abbr> - <a href="http://laflash.org/" target="_blank">http://laflash.org</a></li>
 <li>Chris Charlton - <a href="http://chrischarlton.us/" target="_blank">http://chrischarlton.us</a> (co-author of <em><a target="_blank" href="http://www.amazon.com/gp/product/1590598962?ie=UTF8&tag=fingerprintme-20&linkCode=as2&camp=1789&creative=9325&creativeASIN=1590598962">Advanced Flex Application Development: Building Rich Media X</a></em>)</li>
