More links updated.
git-svn-id: http://argouml-actionscript3.tigris.org/svn/argouml-actionscript3/trunk@4 86345048-e22b-0410-8114-c1fae6e3b697

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,19 @@
 <li><strong>Programming ActionScript 3.0</strong> - <a href="http://livedocs.adobe.com/flash/9.0/main/" target="_blank">http://livedocs.adobe.com/flash/9.0/main/</a> and <a href="http://livedocs.adobe.com/flex/3/html/Part6_ProgAS_1.html" target="_blank">http://livedocs.adobe.com/flex/3/html/Part6_ProgAS_1.html</a></li>
 <li><strong>ActionScript 3.0 Language and Components Reference</strong> - <a href="http://livedocs.adobe.com/flash/9.0/ActionScriptLangRefV3/" target="_blank">http://livedocs.adobe.com/flash/9.0/ActionScriptLangRefV3/</a></li>
 <li><strong>Flex 3 ActionScript Language Reference</strong> (Flash &amp; <acronym>Adobe Integrated Runtime</acronym> classes included) - <a href="http://livedocs.adobe.com/flex/3/langref/" target="_blank" title="ActionScript 3.0 Language Reference">http://livedocs.adobe.com/flex/3/langref/</a></li>
+<li><strong>ActionScript 3.0 language specification</strong> - <a target="_blank" href="http://livedocs.macromedia.com/specs/actionscript/3/as3_specification.html>http://livedocs.macromedia.com/specs/actionscript/3/as3_specification.html</a></li>
+<li><strong>ActionScript 3.0 overview</strong> - <a target="_blank" href="http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html">http://www.adobe.com/devnet/actionscript/articles/actionscript3_overview.html</a></li>
+<li><strong>Programming ActionScript 3.0</strong> - <a target="_blank" href="http://www.adobe.com/go/programmingAS3">http://www.adobe.com/go/programmingAS3</a></li>
+<li><strong>ActionScript 3.0 examples</strong> - <a target="_blank" href="http://www.adobe.com/go/as3examples">http://www.adobe.com/go/as3examples</a></li>
+<li><strong>Tips for learning ActionScript 3.0</strong> - <a target="_blank" href="http://www.adobe.com/devnet/actionscript/articles/actionscript_tips.html">http://www.adobe.com/devnet/actionscript/articles/actionscript_tips.html</a></li>
 </ul>
+
+
+
+
+
+
+
 
 <h3>Friends, Contributors, Support</h3>
 <ul>
