--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,17 +1,18 @@
 <!-- $Id$ -->
- <ul>
-  <li><a href="/servlets/ProjectMemberList">Membership</a></li>
-  <li><a href="/servlets/ProjectMailingListList">Mailing lists</a></li>
-  <li><a href="/servlets/ProjectDocumentList">Files</a></li>
-  <li><a href="/source/browse/argouml-atl/">Source</a></li>
- </ul>
+<!-- This files is generated from the generate-project-tools.sh script. -->
+  <ul>
+    <li><a href="/servlets/ProjectMemberList">Membership (ACTIONSCRIPT3)</a></li>
+    <li><a href="/servlets/ProjectMailingListList">Mailing lists (ACTIONSCRIPT3)</a></li>
+    <li><a href="/servlets/ProjectDocumentList">Files (ACTIONSCRIPT3)</a></li>
+    <li><a href="/source/browse/argouml-actionscript3/">Source (ACTIONSCRIPT3)</a></li>
+  </ul>
 </dd>
 
 <dt>The ArgoUML Project</dt>
 <dd>
- <ul>
-  <li><a href="http://argouml.tigris.org/">ArgoUML Home</a>  </li>
-  <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">News</a>  </li>
-  <li><a href="http://argouml.tigris.org/project_bugs.html">Bugs and Issues</a>  </li>
-  <li><a href="http://argouml.tigris.org/dev.html">Developer Zone</a>  </li>
- </ul>
+  <ul>
+    <li><a href="http://argouml.tigris.org/">ArgoUML Home</a></li>
+    <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">ArgoUML News</a></li>
+    <li><a href="http://argouml.tigris.org/project_bugs.html">Bugs and Issues</a></li>
+    <li><a href="http://argouml.tigris.org/dev.html">Developer Zone</a></li>
+  </ul>
