--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -2,7 +2,7 @@
 <!-- This files is generated from the generate-project-tools.sh script. -->
   <ul>
     <li><a href="/servlets/ProjectMemberList">Membership (ACTIONSCRIPT3)</a></li>
-    <li><a href="/servlets/ProjectMailingListList">Mailing lists (ACTIONSCRIPT3)</a></li>
+    <li><a href="/ds/viewForums.do">Mailing lists (ACTIONSCRIPT3)</a></li>
     <li><a href="/servlets/ProjectDocumentList">Files (ACTIONSCRIPT3)</a></li>
     <li><a href="/source/browse/argouml-actionscript3/">Source (ACTIONSCRIPT3)</a></li>
   </ul>
